JWT Bearer Authentication applied

--- a/University/UniversityApiBackend/appsettings.json
+++ b/University/UniversityApiBackend/appsettings.json
@@ -11,7 +11,7 @@
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigningKey": true,
-    "IssuerSigninKey": "",
+    "IssuerSigninKey": "64A63153-11C1-4919-911-efaf99a9b456",
     "ValidateIssuer": true,
     "ValidIssuer": "https://localhost:7255",
     "ValidateAudience": true,
